kube/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mini-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: online-store.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bff-store-service
            port:
              number: 80
